--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>IJSE - Institute of Software Engineering</h1>
+<h2>#1 Software Engineering Institute in Sri Lanka</h2>>
+
 </body>
 </html>
