--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 <h1>IJSE - Institute of Software Engineering</h1>
 <h2>#1 Software Engineering Institute in Sri Lanka</h2>>
+<h2>Sherul dhanushka</h2>>
+
 
 </body>
 </html>
