--- a/index.html
+++ b/index.html
@@ -3,12 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="description" content="this is the description">
+    <meta name="keyword" content="java,html,css,js,go,python,react">
+    <meta name="aurthor" content="sheruldhanushka ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type ="image/x-icon" href="assets/maintenance chart.jpeg">
 </head>
 <body>
 <h1>IJSE - Institute of Software Engineering</h1>
-<h2>#1 Software Engineering Institute in Sri Lanka</h2>>
-<h2>Sherul dhanushka</h2>>
+<h2>#1 Software Engineering Institute in <span>Sri Lanka</span></h2>
+<h2>Sherul dhanushka</h2>
+<!--nesting element--> <!-- em -emphosis -->
+<em> JAVA</em><em> PYTHON</em><em> GO</em>
+<p>Java</p> <p>PYTHON</p> <P>GO</P>
+<p> Welcome to <em>IJSE</em></p>
+<img src="assets/maintenance%20chart.jpeg" alt ="logo" width="200" height="200">
+<p>hello</p>
+<p> <i>Lorem </i>ipsum <b>dolor</b> <u>sit amet</u>  ,<mark> consectetur</mark>  X<sup>2</sup> H<sub>2</sub>O adipisicing elit. Aliquam aperiam autem cupiditate dolor dolorem dolorum est eveniet, fugiat harum iusto libero, nisi odio possimus quam reiciendis suscipit tempora voluptate voluptatibus.</p>
+<address>St.peter's,Road,Maggona</address>
+<address><pre>
+    St.peter's,
+    Road,
+    Maggona.</pre>
+</address>
+<pre>
+    <code>
+        fuction(){
+            console.log("Hello world");
+        }
+    </code>
+</pre>
+< marquee>Hi </marquee>
 
+<table border="1">
+    <thead>
+        <th>ID</th>
+        <th colspan="2">NAME</th>
+        <th>ADDRESS</th>
+            <th>TEL</th>
+    </thead>
+
+    <tbody>
+
+    <tr>
+        <td>1</td>
+        <td>Dinuka</td>
+        <td>Ishara</td>
+        <td>Colombo</td>
+        <td>0718307738</td>
+        <td></td>
+    </tr>
+
+    <tr>
+        <td>2</td>
+        <td>Sherul</td>
+        <td>Fernando</td>
+        <td>Kalutara</td>
+        <td>0718307738</td>
+        <td></td>
+    </tr>
+
+    <tr>
+        <td>3</td>
+        <td>Shenal</td>
+        <td>Fernando</td>
+        <td rowspan="2">Maggona</td>
+        <td>0778626300</td>
+        <td></td>
+    </tr>
+
+    <tr>
+        <td>4</td>
+        <td>Niraml</td>
+        <td>Fernando</td>
+        <td>0778645200</td>
+        <td></td>
+    </tr>
+
+    </tbody>
+
+</table>
 
 </body>
 </html>
+
+<table border="1">
+    <caption>student table</caption>
+    <thead>
+     <th>Id</th>
+     <th>Name</th>
+     <th colspan="2">Emails</th>
+     <th>Parent's name</th>
+
+    </thead>
+
+    <tbody>
+    <tr>
+    <td>1</td>
+    <td>Kavindu</td>
+    <td>Kavindu1@gmail.com</td>
+    <td>Kavindu2@gmail.com</td>
+    <td>Mr.Rathnayaka</td>
+    </tr>
+
+    <tr>
+        <td>2</td>
+        <td>Janith</td>
+        <td>Kavindu1@gmail.com</td>
+        <td>Kavindu2@gmail.com</td>
+        <td>Mr.Rathnayaka</td>
+    </tr>
+
+    <tr>
+        <td>3</td>
+        <td>Sheron</td>
+        <td colspan="2">Kavindu1@gmail.com</td>
+        <td rowspan="2">Mr.Kamal</td>
+    </tr>
+
+    <tr>
+        <td>4</td>
+        <td>Brian</td>
+        <td>Kavindu1@gmail.com</td>
+        <td>Kavindu2@gmail.com</td>
+    </tr>
+
+    <tr>
+        <td>5</td>
+        <td>Vishwa</td>
+        <td>Kavindu1@gmail.com</td>
+        <td>Kavindu2@gmail.com</td>
+        <td>Mr.Rathnayaka</td>
+    </tr>
+
+    <tr>
+        <td>6</td>
+        <td>Kavindu</td>
+        <td colspan="2" rowspan="2">Kavindu1@gmail.com</td>
+        <td rowspan="2">Mr.Rathnayaka</td>
+    </tr>
+
+    <tr>
+        <td>7</td>
+        <td>Kavindu</td>
+
+
+    </tr>
+
+
+    </tbody>
+
+</table>
