--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>IJSE - Institute of Software Engineering</h1>
 <h2>#1 Software Engineering Institute in Sri Lanka</h2>>
 <h2>Sherul dhanushka</h2>>
+    <h3>added customer</h3>
 
 
 </body>
