upto date sep14

--- a/aug17/case2.html
+++ b/aug17/case2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="normalize.css" >
+    <link rel="stylesheet" href="../normalize.css" >
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
         header{
             background: gray;
             height: 75px;
-            position: relative;
+
         }
 
 
@@ -32,10 +32,10 @@
 
         header>nav>ul{
             list-style: none;
-            /*position: absolute;
+            position: absolute;
             top: 0;
             bottom: 0;
-            right: 10px;*/
+            right: 10px;
             margin: auto;
 
 
@@ -115,8 +115,8 @@
         }
 
         main>section>section>div{
-            background: url("assets/videos/videos/monkey.gif");
-
+            background: url("../assets/videos/videos/monkey.gif");
+            border: white 2px solid;
             width: calc(100%/3);
             height: 300px;
             position: absolute;
@@ -161,7 +161,7 @@
 <body>
 <!--header section-->
   <header>
-      <img src="assets/images/ijse.png" title="abc" alt="logo" width="75px">
+      <img src="../assets/images/ijse.png" title="abc" alt="logo" width="75px">
       <nav>
           <ul>
               <li><a href="">Home</a></li>
