--- a/aug24/fixed&sticky.html
+++ b/aug24/fixed&sticky.html
@@ -52,12 +52,31 @@
       display: inline;
       margin: 0px 15px;
     }
+
+    main{
+      margin-top: 80px;
+    }
+
+    section{
+      width: 500px;
+      border: #14d706 solid 5px;
+
+    }
+
+    section>div{
+      width: 50px;
+      aspect-ratio: 1/1;
+      background-color: #14d706;
+      position: sticky;
+      top: 0;
+    }
+
   </style>
 </head>
 <body>
 
 <header>
-  <img src="assets/images/ijse.png" title="abc" alt="logo" width="75px">
+  <img src="../assets/images/ijse.png" title="abc" alt="logo" width="75px">
   <nav>
     <ul>
       <li><a href="">Home</a></li>
@@ -72,33 +91,8 @@
 
 <div></div>
 
-
+<main>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
@@ -114,5 +108,40 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
 
+
+
+  <section>
+    <div></div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+
+  </section>
+
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam animi cum deserunt doloremque, dolorum ducimus eligendi error eveniet impedit non nostrum, provident quas reiciendis rem sed, sit ullam vel?</p>
+
+</main>
 </body>
 </html>
