--- a/aug17/case1-sir.html
+++ b/aug17/case1-sir.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ijse">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="assets/logo.png"> <!-- Favicon -->
-  <link rel="stylesheet" href="normalize.css" >
+  <link rel="stylesheet" href="../normalize.css" >
 
 
 
