--- a/section.html
+++ b/section.html
@@ -3,44 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <meta name="description" content="this is the description">
+  <meta name="keyword" content="java,html,css,js,go,python,react">
+  <meta name="aurthor" content="sheruldhanushka ">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type ="image/x-icon" href="assets/maintenance chart.jpeg">
+
+    <style>
+      header{
+        width: 100%;
+        height: 75px;
+      }
+
+    </style>
 </head>
 <body>
 
 <!--header section-->
-<div>
+<header>
   <!--logo section-->
-  <div>
-    <img src="assets/images/small.jpg" alt="my image">
+  <section>
+    <img src="assets/images/ijse.png" alt="my image" width="75">
     <h1> Sherul Dhanushka</h1>
-  </div>
+  </section>
   <!--nav section-->
-  <div>
+  <nav>
     <h1>
       <a href="">home</a>
       <a href="">about</a>
       <a href="">project</a>
       <a href="">contact</a>
     </h1>
-  </div>
+  </nav>
 
 
-</div>
+</header>
 
 <!--Hero section-->
-<div>
+<main>
 
   <!--Welcome para section-->
-  <div>
-    <h3>Welcome</h3>
-    <h3>To</h3>
-    <h3>My world</h3>
-    <h2>Software Engineer</h2>
+  <section>
+    <section>
+      <h3>Welcome</h3>
+      <h3>To</h3>
+      <h3>My world</h3>
+      <h2>Software Engineer</h2>
+
+    </section>
 
     <button >Download cv</button>
 
-  </div>
+    <img src="assets/images/small.jpg">
 
-</div>
+  </section>
+
+</main>
 
 <!--About section-->
 <div>
