--- a/sir.html
+++ b/sir.html
@@ -8,7 +8,374 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="../assets/logo.png">
   <title>HTML Sectioning Basic - Step 01</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="normalize.css" >
+  <style>
+
+    body{
+      position: relative;
+      overflow-x: hidden;
+    }
+    header{
+      background-color: gray;
+      width: 100%;
+      height: 75px;
+      position: fixed;
+      top:0;
+      display: flex;
+      z-index: 100;
+      justify-content: space-between;
+      box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    }
+
+    header>div{
+      display: flex;
+    }
+
+    nav{
+      position: absolute;
+      right: 30px;
+      align-self: center;
+      height: fit-content;
+
+    }
+
+    nav>a{
+      margin-left: 35px;
+      text-decoration: none;
+    }
+
+    nav>a:hover{
+      color: #29cfec;
+    }
+
+    #hero{
+      margin-top: 100px;
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      /*position: relative;*/
+      height: 700px;
+      z-index: 0;
+    }
+
+    #hero>section:first-child{
+      /*position: absolute;*/
+      left: 150px;
+      font-size: 35px;
+
+    }
+
+    #hero>section:nth-child(2){
+      /*position: absolute;*/
+      right: 50px;
+
+    }
+
+    #hero>section>h2:nth-child(1){
+      /*position: relative;*/
+      left: 40px;
+    }
+
+    #hero>section>h2:nth-child(2){
+      position: relative;
+      left: 100px;
+    }
+
+    #hero>section:nth-child(2)>img{
+      border-radius: 100%;
+    }
+
+
+
+    footer{
+      background: #524f4f;
+
+    }
+
+    footer{
+
+      color: white;
+      text-align: center;
+      padding: 10px 0px;
+      background-color: black;
+      position: relative;
+      top: 350px;
+    }
+
+
+
+    /* CSS */
+    .button-19 {
+                                                         appearance: button;
+                                                         background-color: #101111;
+                                                         border: solid transparent;
+                                                         border-radius: 16px;
+                                                         border-width: 0 0 4px;
+                                                         box-sizing: border-box;
+                                                         color: #FFFFFF;
+                                                         cursor: pointer;
+                                                         display: inline-block;
+                                                         font-family: din-round,sans-serif;
+                                                         font-size: 15px;
+                                                         font-weight: 700;
+                                                         letter-spacing: .8px;
+                                                         line-height: 20px;
+                                                         margin: 0;
+                                                         outline: none;
+                                                         overflow: visible;
+                                                         padding: 13px 16px;
+                                                         text-align: center;
+                                                         text-transform: uppercase;
+                                                         touch-action: manipulation;
+                                                         transform: translateZ(0);
+                                                         transition: filter .2s;
+                                                         user-select: none;
+                                                         -webkit-user-select: none;
+                                                         vertical-align: middle;
+                                                         white-space: nowrap;
+                                                         width: 100%;
+                                                       }
+
+    .button-19:after {
+      background-clip: padding-box;
+      background-color: #1CB0F6;
+      border: solid transparent;
+      border-radius: 16px;
+      border-width: 0 0 4px;
+      bottom: -4px;
+      content: "";
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: -1;
+    }
+
+    .button-19:main,
+    .button-19:focus {
+      user-select: auto;
+    }
+
+    .button-19:hover:not(:disabled) {
+      filter: brightness(1.1);
+      -webkit-filter: brightness(1.1);
+    }
+
+    .button-19:disabled {
+      cursor: auto;
+    }
+
+    .button-19:active {
+      border-width: 4px 0 0;
+      background: none;
+    }
+
+    a{
+      color: black;
+
+    }
+
+    .about{
+      /*border: 2px solid black;*/
+      position: relative;
+
+    }
+
+    .heading{
+      font-size: 4rem;
+      margin-bottom: 3rem;
+      text-align: center;
+    }
+
+    .about-img{
+
+      width: 35rem;
+      height: 35rem;
+
+    }
+
+    .about-img>img{
+      height: 95%;
+      border-radius: 100%;
+      position: relative;
+      bottom: 40px;
+    }
+
+    .about-content>div:first-child{
+      width: 1150px;
+      font-size: 1.5rem;
+      position: absolute;
+      top: 100px;
+      right: 0;
+
+    }
+
+    .about>section>.about-content>div:nth-child(2){
+      position: absolute;
+      top: 600px;
+      right:1080px
+    }
+
+    .project{
+      position: relative;
+      width: 100%;
+      height: 600px;
+      /*border: 2px solid black;*/
+      top:250px
+    }
+
+
+    .project>div{
+      display: flex;
+      justify-content: space-around;
+
+    }
+
+    .project>div>div{
+      display: inline-block;
+      width: calc(1000px/3);
+      height: 400px;
+      border: black 2px solid;
+      border-radius: 30px;
+    }
+
+    .project>div>div:hover{
+      animation: move 1s 0s 1;
+      background-color: #676565;
+      opacity: 0.9;
+    }
+
+  @keyframes  move{
+    100% {
+      transform: scale(1.2, 1.2);
+    }
+  }
+
+
+    .project>div>div>img{
+      width: 50%;
+      position: relative;
+      left: 40px;
+    }
+
+    .project>div>div>p{
+      text-align: center;
+      margin: 5px;
+    }
+
+    .project>div>div>button{
+      position: relative;
+      left: 120px;
+      border-radius: 10px;
+
+    }
+
+    .project>div>div>button:hover{
+      background-color: #1CB0F6;
+    }
+
+    .card-heading{
+      text-align: center;
+      font-size: 20px;
+    }
+
+    #contact{
+      display: flex;
+      width: 100%;
+      height: 650px;
+      position: relative;
+      top:250px;
+      /*border: black 2px solid;*/
+      justify-content: space-around;
+
+    }
+
+    #contact>img{
+      width: 400px;
+      height: 500px;
+      align-self: center;
+    }
+
+    #contact>div{
+      width: 850px;
+      position: relative;
+      right: 50px;
+
+    }
+
+    form>div:first-child{
+      margin-bottom: 30px;
+    }
+
+    form>div>label{
+      font-size: 35px;
+    }
+
+    form input{
+     width: 800px;
+      height: 30px;
+    }
+    form textarea{
+      width: 800px;
+      height: 230px;
+    }
+
+    form>button{
+      width: 150px;
+      height: 50px;
+      font-size: 25px;
+    }
+
+    @media all and (max-width: 500px) {
+      nav{
+        visibility: hidden;
+      }
+
+      header{
+        display: flex;
+        justify-content: space-around;
+      }
+
+      header>div{
+        /*align-self: center;*/
+
+      }
+
+      header>div>img{
+        align-self: center ;
+        max-width: 50px;
+        max-height: 50px;
+      }
+
+      #hero{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+      }
+
+      #hero>section>div{
+        width: 100%;
+        display: grid;
+        flex-direction: column;
+        border: black 2px solid;
+        align-content: center;
+        justify-content: center;
+      }
+
+      #hero>section>img{
+        visibility: hidden;
+        width: 25vw;
+        height: 25vh;
+      }
+
+
+
+
+
+    }
+
+
+
+  </style>
+
 
 </head>
 
@@ -17,56 +384,87 @@
 <header>
   <!-- logo section -->
   <div>
-    <img src="../assets/logo.png" title="logo" alt="logo">
-    <h3 >IJSE</h3>
+    <img src="assets/images/ijse.png" title="logo" alt="logo" >
+    <h2 >IJSE</h2>
   </div>
   <!-- Nav section -->
   <nav>
-    <a href="">Home</a>
-    <a href="">About</a>
-    <a href="">Project</a>
+    <a href="#hero">Home</a>
+    <a href="#about">About</a>
+    <a href="#project">Project</a>
+    <a href="#contact">Contact Us</a>
   </nav>
 </header>
 
 <!-- Hero section -->
-<main>
+<main id="hero">
   <!-- Welcome section -->
   <section>
-    <h4>Welcome</h4>
-    <h4>to</h4>
-    <h1>My Word</h1>
-    <p>Software Engineer</p>
-    <button>My CV</button>
+    <div>
+      <h2>Welcome</h2>
+      <h2>to</h2>
+      <h1>My World</h1>
+
+
+      <p>Software Engineer</p>
+      <button class="button-19" role="button">Download CV</button>
+
+    </div>
   </section>
   <!-- Hero section image -->
   <section>
-    <img src="../assets/images/small.jpg" title="my image" alt="my image">
+    <img src="assets/images/pexels-moh-adbelghaffar-771742.jpg" title="my image" alt="my image" height="500px" width="575px">
   </section>
 </main>
 
 <!-- About section -->
-<main>
+<main class="about" id="about">
   <!-- About section topic -->
-  <h2>About</h2>
+  <h1 class="heading">About <span>Me</span></h1>
   <!-- About section content -->
   <section>
-    <img src="../assets/images/small.jpg" title="image" alt="image">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
-    </p>
+    <div class="about-img">
+      <img src="assets/images/pexels-moh-adbelghaffar-771742.jpg" title="image" alt="image">
+      <span class="circle-spin"></span>
+    </div>
+
+    <section class="about-content">
+      <div>
+        <h3>Backend Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores assumenda consectetur consequatur consequuntur deserunt eaque id illo illum inventore ipsum iste laudantium neque, porro possimus quaerat soluta suscipit. Recusandae?
+
+
+        </p>
+      </div>
+
+
+      <div class="btn-box btns">
+        <a href="#" class="btn"> Read more</a>
+      </div>
+    </section>
+
+
   </section>
 </main>
 
 <!-- Project section -->
-<main>
+<main id="project" class="project">
   <!-- Project section topic -->
-  <h2>Project</h2>
+  <h2 class="heading">Project</h2>
   <!-- Project section content -->
   <div>
     <!-- Card 1 -->
     <div>
       <!-- Card title -->
-      <h3>Project 01</h3>
+      <h3 class="card-heading">Project 01</h3>
+      <!--card image-->
+      <img src="assets/images/project_hotelImage.png">
       <!-- Card description -->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <!-- Card button -->
@@ -75,7 +473,9 @@
     <!-- Card 2 -->
     <div>
       <!-- Card title -->
-      <h3>Project 02</h3>
+      <h3 class="card-heading">Project 02</h3>
+      <!--card image-->
+      <img src="assets/images/project_hotelImage.png">
       <!-- Card description -->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <!-- Card button -->
@@ -84,7 +484,9 @@
     <!-- Card 3 -->
     <div>
       <!-- Card title -->
-      <h3>Project 03</h3>
+      <h3 class="card-heading">Project 03</h3>
+      <!--card image-->
+      <img src="assets/images/project_hotelImage.png">
       <!-- Card description -->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <!-- Card button -->
@@ -94,27 +496,27 @@
 </main>
 
 <!-- contact section -->
-<div>
+<main id="contact" class="contact">
   <!-- contact section image 1 -->
-  <img src="../assets/images/small.jpg" title="contact-image" alt="contact-image">
+  <img src="assets/images/project_hotelImage.png" title="contact-image" alt="contact-image" >
   <!-- contact section form -->
-  <div>
-    <h3>Contact Us</h3>
+  <!--<div>
+    <h3 class="heading">Contact Us</h3>
     <form action="">
       <div>
         <label for="email">Email</label><br>
         <input type="email" id="email" placeholder="Enter your email">
       </div>
       <div>
-        <label for="message">Email</label><br>
+        <label for="message">Message</label><br>
         <textarea id="message" placeholder="Enter your message"></textarea>
       </div>
-      <button type="submit">Submit</button>
+      <button class="button-19" role="button" type="submit">Submit</button>
     </form>
-  </div>
+  </div>-->
   <!-- contact section image 2 -->
-  <img src="../assets/images/small.jpg" title="contact-image" alt="contact-image">
-</div>
+<!--  <img src="assets/images/project_hotelImage.png" title="contact-image" alt="contact-image" width="75px">-->
+</main>
 
 <!-- footer section -->
 <footer>
@@ -125,24 +527,25 @@
   </div>
 
   <!-- footer recent links section -->
-  <div>
+  <section>
     <h4>Recent Links</h4>
-    <div>
+   <!-- <section>
       <a href="">Home</a><br>
       <a href="">About</a><br>
       <a href="">Project</a><br>
-    </div>
-  </div>
+    </section>-->
+  </section>
 
   <!-- footer information section -->
-  <div>
-    <h4>IJSE Travels</h4>
+  <footer>
+      <h4>IJSE Travels</h4>
     <div>
       <address>123A, Flower Rd, Colombo</address>
       <a href="mailto:hello@ijsetravel.lk">hello@ijsetravel.lk</a><br>
       <a href="tel:+94768891111">+94 76 889 1111</a><br>
     </div>
-  </div>
+  </footer>
+
 </footer>
 </body>
 </html>
